[metadata]
name = pyweatherflowrest
version = 0.1.22
description = Python Wrapper for WeatherFlow Rest API
long_description = file: README.md
long_description_content_type = text/markdown
author = Bjarne Riis
author_email = bjarne@briis.com
url = https://github.com/briis/pyweatherflowrest
license = MIT
keywords = Home Assistant, Python, WeatherFlow
classifiers = 
	Development Status :: 4 - Beta
	Intended Audience :: Developers
	Topic :: Software Development :: Build Tools
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10

[options]
packages = find:
include_package_data = True
install_requires = 
	aiohttp

[options.package_data]
pyweatherflowrest = py.typed

[options.packages.find]
exclude = 
	tests
	tests.*

[egg_info]
tag_build = 
tag_date = 0

